--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-  <!doctype html>
+<!doctype html>
 <html lang="en"> 
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>To My Love, Fina ❤️</title> 
+  <title>To My Love,  Pauline ❤️</title> 
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;display=swap" rel="stylesheet"> 
   <style>
     body {
@@ -181,11 +181,21 @@
    <source src="https://cdn.pixabay.com/audio/2022/12/07/audio_d8e0f51e82.mp3" type="audio/mpeg"> 
   </audio> 
   <div class="hearts"> 
-   <div class="heart">💖</div> 
-   <div class="heart">❤️</div> 
-   <div class="heart">💘</div> 
-   <div class="heart">💕</div> 
-   <div class="heart">💞</div> 
+   <div class="heart">
+     💖 
+   </div> 
+   <div class="heart">
+     ❤️ 
+   </div> 
+   <div class="heart">
+     💘 
+   </div> 
+   <div class="heart">
+     💕 
+   </div> 
+   <div class="heart">
+     💞 
+   </div> 
    <div class="sparkle"></div> 
    <div class="sparkle"></div> 
    <div class="sparkle"></div> 
@@ -193,7 +203,7 @@
    <div class="sparkle"></div> 
   </div> 
   <div id="falling-hearts-container"></div> 
-  <h1>To My Love, Fina ❤️</h1> 
+  <h1>To My Love, Pauline ❤️</h1> 
   <p>A little place on the internet, just for you.</p> 
   <div class="card"> 
    <h2>Our Story</h2> 
@@ -207,76 +217,108 @@
   <div class="card"> 
    <h2>Gallery 📸</h2> 
    <div class="gallery"> 
-    <div><a href="#img1"><img src="https://files.catbox.moe/n62ear.jpeg"></a><div class="caption">You, so lovely 💖</div></div> 
-    <div><a href="#img2"><img src="https://files.catbox.moe/iheutt.jpeg"></a><div class="caption">My forever crush 😍</div></div> 
-    <div><a href="#img3"><img src="https://files.catbox.moe/1v92j1.jpeg"></a><div class="caption">Our love in pictures 💫</div></div> 
-    <div><a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg"></a><div class="caption">Yours. Always. Forever. 💕</div></div> 
-    <div><a href="#img5"><img src="https://files.catbox.moe/n3tays.jpeg"></a><div class="caption">Your smile lights my world 🌟</div></div>
-    <div><a href="#img6"><img src="https://files.catbox.moe/7decad.jpeg"></a><div class="caption">My heart belongs to you ❤️</div></div>
-    <div><a href="#img7"><img src="https://files.catbox.moe/uungbr.jpeg"></a><div class="caption">Beautiful inside and out 💐</div></div>
-    <div><a href="#img8"><img src="https://files.catbox.moe/qwqrpq.jpeg"></a><div class="caption">The love of my life 💖</div></div>
+    <div> <a href="#img1"><img src="https://files.catbox.moe/rpwwrg.jpeg"></a> 
+     <div class="caption">
+       You, so lovely 💖 
+     </div> 
+    </div> 
+    <div> <a href="#img2"><img src="https://files.catbox.moe/69pgav.jpeg"></a> 
+     <div class="caption">
+       My forever crush 😍 
+     </div> 
+    </div> 
+    <div> <a href="#img3"><img src="https://files.catbox.moe/5fr7ib.jpeg"></a> 
+     <div class="caption">
+       I will love you forever 💫 
+     </div> 
+    </div> 
+    <div> <a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg"></a> 
+     <div class="caption">
+       Yours. Always. Forever. 💕 
+     </div> 
+    </div> 
+    <div> <a href="#img5"><img src="https://files.catbox.moe/sx7m7e.jpeg"></a> 
+     <div class="caption">
+       Your smile lights my world 🌟 
+     </div> 
+    </div> 
+    <div> <a href="#img6"><img src="https://files.catbox.moe/22olbo.jpeg"></a> 
+     <div class="caption">
+       My heart belongs to you ❤️ 
+     </div> 
+    </div> 
+    <div> <a href="#img7"><img src="https://files.catbox.moe/x6667k.jpeg"></a> 
+     <div class="caption">
+       Beautiful inside and out 💐 
+     </div> 
+    </div> 
+    <div> <a href="#img8"><img src="https://files.catbox.moe/gcf8gd.jpeg"></a> 
+     <div class="caption">
+       The man of your life 💖 
+     </div> 
+    </div> 
+   </div> 
+  </div> <!-- Lightboxes --> 
+  <div id="img1" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/rpwwrg.jpeg"> 
+  </div> 
+  <div id="img2" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/69pgav.jpeg"> 
+  </div> 
+  <div id="img3" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/5fr7ib.jpeg"> 
+  </div> 
+  <div id="img4" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/okfjgu.jpeg"> 
+  </div> 
+  <div id="img5" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/sx7m7e.jpeg"> 
+  </div> 
+  <div id="img6" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/22olbo.jpeg"> 
+  </div> 
+  <div id="img7" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/x6667k.jpeg"> 
+  </div> 
+  <div id="img8" class="lightbox"> <a href="#" class="close-lightbox">×</a> 
+   <img src="https://files.catbox.moe/gcf8gd.jpeg"> 
+  </div> 
+  <div class="card"> 
+   <h2>Special Video❤️😘 🎥</h2> 
+   <video controls> 
+    <source src="https://files.catbox.moe/jdvtu8.mp4" type="video/mp4"> 
+   </video> 
+   <div class="caption">
+     Like Jidenna sings… I’ll run to you, always 🦌❤️ 
    </div> 
   </div> 
-
-  <!-- Lightboxes -->
-  <div id="img1" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/n62ear.jpeg"></div> 
-  <div id="img2" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/iheutt.jpeg"></div> 
-  <div id="img3" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/1v92j1.jpeg"></div> 
-  <div id="img4" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/okfjgu.jpeg"></div> 
-  <div id="img5" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/n3tays.jpeg"></div>
-  <div id="img6" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/7decad.jpeg"></div>
-  <div id="img7" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/uungbr.jpeg"></div>
-  <div id="img8" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/qwqrpq.jpeg"></div>
-
-  <div class="card"> 
-   <h2>Special Video❤️😘 🎥</h2>
-   <video controls>
-     <source src="https://files.catbox.moe/jdvtu8.mp4" type="video/mp4">
-   </video>
-   <div class="caption">Like Jidenna sings… I’ll run to you, always 🦌❤️</div>
-  </div>
-
   <div class="card"> 
    <h2>Love Letters ✉️</h2> 
    <p><em>“Every moment with you feels like home.”</em></p> 
    <p><em>“You are my sunshine on every cloudy day.”</em></p> 
   </div> 
   <div class="card"> 
-   <h2>Our Playlist 🎶</h2> 
-   <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M" height="80"></iframe> 
+   <h2>Our Playlist 🎶</h2> <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M" height="80"></iframe> 
+  </div> <!-- Countdown Card --> 
+  <div class="card"> 
+   <h2>Countdown to Our Anniversary 💞</h2> 
+   <p id="countdown"></p> 
   </div> 
-
-  <!-- Countdown Card -->
-  <div class="card">
-    <h2>Countdown to Our Anniversary 💞</h2>
-    <p id="countdown"></p>
-  </div>
-
   <div class="card"> 
    <h2>Days Together 🗓️</h2> 
    <p id="daysTogether"></p> 
-  </div> 
-
-  <!-- Updated Open When Card -->
+  </div> <!-- Updated Open When Card --> 
   <div class="card"> 
-   <h2>Open when</h2> 
-   <button id="btnSad">Click when sad 😢</button> 
-   <button id="btnMiss">Click when missing me 💌</button> 
-   <button id="btnSleep">Click when can’t sleep 🌙</button> 
+   <h2>Open when</h2> <button id="btnSad">Click when sad 😢</button> <button id="btnMiss">Click when missing me 💌</button> <button id="btnSleep">Click when can’t sleep 🌙</button> 
+  </div> <!-- Restored Secret Message Card --> 
+  <div class="card"> 
+   <h2>Secret Message 🔒</h2> <button id="secretBtn">Click for a Sweet Secret🤭</button> 
   </div> 
-
-  <!-- Restored Secret Message Card -->
-  <div class="card">
-    <h2>Secret Message 🔒</h2>
-    <button id="secretBtn">Click for a Sweet Secret🤭</button>
-  </div>
-
   <footer style="margin-top: 50px; font-size: 0.9rem; color: #6b7280;">
-    Made with ❤️ for Fina — Forever yours. 
+    Made with ❤️ for Pauline — Forever yours. 
   </footer> 
-
   <script>
-    const startDate = new Date("2025-07-17");
+    const startDate = new Date("2025-11-09");
     const today = new Date();
     const diffTime = Math.abs(today - startDate);
     const daysTogether = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
@@ -296,10 +338,10 @@
 
     // Open When buttons
     document.getElementById("btnSad").addEventListener("click", function () {
-      alert("Beb, every tear you shed is a piece of my heart crying with you. I wish I could be there to hold you close until the sadness melts away. You’re never alone, not even for a second. ❤️");
+      alert("Babe, every tear you shed is a piece of my heart crying with you. I wish I could be there to hold you close until the sadness melts away. You’re never alone, not even for a second. ❤️");
     });
     document.getElementById("btnMiss").addEventListener("click", function () {
-      alert("I miss you more than words can ever say. Every moment without you is a countdown until I can see your smile again. You’re in my thoughts always, beb 💌");
+      alert("I miss you more than words can ever say. Every moment without you is a countdown until I can see your smile again. You’re in my thoughts always, sweetie 💌");
     });
     document.getElementById("btnSleep").addEventListener("click", function () {
       alert("Close your eyes, my love. Imagine my arms wrapped around you, my voice whispering sweet dreams in your ear. Sleep peacefully knowing my heart beats for you. 🌙❤️");
@@ -311,7 +353,7 @@
     });
 
     // Countdown to Anniversary
-    const anniversaryDate = new Date("2026-07-17");
+    const anniversaryDate = new Date("2026-11-09");
     function updateCountdown() {
       const now = new Date();
       const diff = anniversaryDate - now;
@@ -333,4 +375,4 @@
     updateCountdown();
   </script> 
  </body>
-                                                                              </html>
+   </html>
